--- a/concierge/templates/status.html
+++ b/concierge/templates/status.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Conceirge</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
@@ -13,53 +14,23 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/main.css') }}"
     />
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const logs = {
-          services: {},
-          daemons: {},
-        };
-
-        const refreshLogs = async () => {
-          const rawLogs = await (await fetch("/logs")).json();
-
-          for (const appName in rawLogs["services"]) {
-            if (logs.services[appName] != rawLogs["services"][appName]) {
-              logs.services[appName] = rawLogs["services"][appName];
-
-              const logTextarea = document.querySelector(`#${appName}_log`);
-
-              logTextarea.innerHTML = logs["services"][appName];
-              logTextarea.scrollTop = logTextarea.scrollHeight;
-            }
-          }
-
-          for (const appName in rawLogs["daemons"]) {
-            if (logs.services[appName] != rawLogs["daemons"][appName]) {
-              logs.services[appName] = rawLogs["daemons"][appName];
-
-              const logTextarea = document.querySelector(`#${appName}_log`);
-
-              logTextarea.innerHTML = logs["daemons"][appName];
-              logTextarea.scrollTop = logTextarea.scrollHeight;
-            }
-          }
-        };
-
-        refreshLogs();
-        setInterval(refreshLogs, 2000);
-      });
-    </script>
+    <script src="{{ url_for('static', filename='js/status.js') }}"></script>
   </head>
   <body>
-    <div class="container mt-2">
-      <h3>Welcome to 🐮's <code>concierge</code> microservice.</h3>
+    <div class="container mt-3">
+      <h3>🐮's <code>concierge</code> microservice.</h3>
       <hr />
-      <h4>Services</h4>
+      {% for app_type in ['services', 'daemons'] %} {% for app_name in
+      projects[app_type].keys()|sort() %}
+      <a class="btn btn-primary btn-sm" href="#{{ app_name }}"
+        >#{{ app_name }}</a
+      >
+      {% endfor %} {% endfor %} {% for app_type in ['services', 'daemons'] %}
+      <h4 class="my-3">{{ app_type[0]|upper }}{{ app_type[1:] }}</h4>
       <div class="row">
-        {% for app_name in services %}
-        <div class="col-xs-12 col-xxl-6 mb-4">
-          <div class="card">
+        {% for app_name in projects[app_type].keys()|sort() %}
+        <div class="col-xs-12 mb-3">
+          <div class="card" id="{{ app_name }}">
             <div class="card-header">
               <a
                 href="https://cocoshouse.xyz/{{ app_name }}"
@@ -69,35 +40,47 @@
               >
             </div>
             <div class="card-body">
-              <textarea
-                class="form-control deploy-log"
-                id="{{ app_name }}_log"
-                rows="10"
-                readonly
-              ></textarea>
+              <div class="row">
+                {% for log_type in ['app', 'deploy'] %}
+                <div class="col-12 col-md-6">
+                  <h6 class="mb-2 mt-2 mt-md-0">{{ log_type[0]|upper }}{{ log_type[1:] }} log</h6>
+                  <textarea
+                    class="form-control {{ log_type }}-log"
+                    id="{{ app_name }}-{{ log_type }}-log"
+                    rows="10"
+                    readonly
+                  ></textarea>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="card-footer text-body-secondary">
+              <a
+                href="https://github.com/{{ projects['services'][app_name] }}"
+                class="card-link link-secondary"
+                target="_blank"
+              >
+                GitHub</a
+              >
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
-      <h4>Daemons</h4>
-      <div class="row">
-        {% for app_name in daemons %}
-        <div class="col-xs-12 col-xxl-6 mb-4">
-          <div class="card">
-            <div class="card-header">{{ app_name }}</div>
-            <div class="card-body">
-              <textarea
-                class="form-control deploy-log"
-                id="{{ app_name }}_log"
-                rows="10"
-                readonly
-              ></textarea>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
+      {% endfor %}
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+      >
+        <p class="col-md-4 mb-0 text-body-secondary">🐄s are friends, not food.</p>
+        <ul class="nav col-md-4 justify-content-end">
+          <li class="nav-item">
+            <a href="/" class="nav-link px-2 text-body-secondary">Status</a>
+          </li>
+          <li class="nav-item">
+            <a href="/infra" class="nav-link px-2 text-body-secondary">Infra Status</a>
+          </li>
+        </ul>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
