--- a/concierge/templates/base.html
+++ b/concierge/templates/base.html
@@ -17,7 +17,7 @@
     {% block scripts %}{% endblock %}
   </head>
   <body>
-    <div class="container mt-3">
+    <div class="container-fluid container-lg mt-3">
       <h3>🐮's <code>concierge</code> microservice.</h3>
       <hr />
 
